# trabalho-crip

./: CMakeLists.txt  README.md  main.c  message.txt
domain/cryp/: keyword.c  keyword.h
domain/shared/: file.c  file.h  path.c  path.h
